# lab08

./: CMakeLists.txt  CMakeLists.txt.bak  CPackConfig.cmake  ChangeLog.md  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  docker.yml
_logs/polly/default/: log.txt
tests/: test1.cpp
