cmake_minimum_required(VERSION 3.10)
project(print)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SOURCES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/sources)
set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(EXAMPLES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/examples)
add_library(print STATIC ${SOURCES_DIR}/print.cpp)
target_include_directories(print PUBLIC ${INCLUDE_DIR})
add_executable(example1 ${EXAMPLES_DIR}/example1.cpp)
add_executable(example2 ${EXAMPLES_DIR}/example2.cpp)
target_link_libraries(example1 print)
target_link_libraries(example2 print)
install(TARGETS print DESTINATION lib)
install(FILES ${INCLUDE_DIR}/print.hpp DESTINATION include)
message(STATUS "Examples will be built in ${CMAKE_BINARY_DIR}")
