cmake_minimum_required(VERSION 3.10)
project(print)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error")

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(BUILD_EXAMPLES "Build examples" ON)
option(BUILD_TESTS "Build tests" OFF)

add_library(print STATIC ${CMAKE_CURRENT_SOURCE_DIR}/sources/print.cpp)
target_include_directories(print PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
if(BUILD_EXAMPLES)
  add_executable(example1 ${CMAKE_CURRENT_SOURCE_DIR}/examples/example1.cpp)
  add_executable(example2 ${CMAKE_CURRENT_SOURCE_DIR}/examples/example2.cpp)
  target_link_libraries(example1 print)
  target_link_libraries(example2 print)
  message(STATUS "Examples will be built in ${CMAKE_BINARY_DIR}")
endif()
if(BUILD_TESTS)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error")
 enable_testing()
  add_subdirectory(third-party/gtest)
 file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp)
  if(NOT TEST_SOURCES)
    message(FATAL_ERROR "No test files found in ${CMAKE_CURRENT_SOURCE_DIR}/tests/")
  endif()
add_executable(check ${TEST_SOURCES})
  target_link_libraries(check print gtest_main)
  target_include_directories(check PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
  add_test(NAME check COMMAND check)
endif()
