cmake_minimum_required(VERSION 3.14)
project(print)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(BUILD_EXAMPLES "Build examples" OFF)
option(BUILD_TESTS "Build tests" ON)
option(BUILD_DEMO "Build demo application" OFF)
set(PRINT_VERSION_MAJOR 0)
set(PRINT_VERSION_MINOR 1)
set(PRINT_VERSION_PATCH 0)
set(PRINT_VERSION_TWEAK 0)
set(PRINT_VERSION ${PRINT_VERSION_MAJOR}.${PRINT_VERSION_MINOR}.${PRINT_VERSION_PATCH}.${PRINT_VERSION_TWEAK})
set(PRINT_VERSION_STRING "v${PRINT_VERSION}")
add_library(print STATIC ${CMAKE_CURRENT_SOURCE_DIR}/sources/print.cpp)
target_include_directories(print PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
if(BUILD_EXAMPLES)
  add_executable(example1 ${CMAKE_CURRENT_SOURCE_DIR}/examples/example1.cpp)
  add_executable(example2 ${CMAKE_CURRENT_SOURCE_DIR}/examples/example2.cpp)
  target_link_libraries(example1 print)
  target_link_libraries(example2 print)
  message(STATUS "Examples will be built in ${CMAKE_BINARY_DIR}")
endif()
include(FetchContent)
FetchContent_Declare(
    googletest
    GIT_REPOSITORY https://github.com/google/googletest.git
    GIT_TAG        v1.15.2
)
FetchContent_MakeAvailable(googletest)
if(BUILD_TESTS)
  enable_testing()
  file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp)
  if(NOT TEST_SOURCES)
    message(FATAL_ERROR "No test files found in ${CMAKE_CURRENT_SOURCE_DIR}/tests/")
  endif()
  add_executable(check ${TEST_SOURCES})
  target_link_libraries(check print GTest::gtest_main)
  target_include_directories(check PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
  add_test(NAME check COMMAND check)
endif()
if(BUILD_DEMO AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/demo/main.cpp)
  add_executable(demo ${CMAKE_CURRENT_SOURCE_DIR}/demo/main.cpp)
  target_link_libraries(demo print)
  install(TARGETS demo RUNTIME DESTINATION bin)
endif()
install(TARGETS print DESTINATION lib)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/print.hpp DESTINATION include)
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/CPackConfig.cmake)
  include(CPackConfig.cmake)
endif()
